--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -59,9 +59,14 @@
                 <h1 class="text-center">{{curGame.code}}</h1>
                 <input type="text" class="form-control input-lg" autofocus ng-model="curGuess">
                 <br/>
-                <button type="button" class="btn btn-lg btn-success btn-block" ng-click="guess(curGuess)">Йа кнопка</button>
-                <br/>
                 <h4>{{curGame.message}}</h4>
+                <br/>
+                <button type="button" class="btn btn-lg btn-success btn-block" ng-click="guess(curGuess)">Йа кнопка</button>
+                <h2>Правила</h2>
+                <p>Слово зашифровано: указаны первая и последняя буквы, а также количество букв между ними.</p>
+                <p>Попытайтесь отгадать исходное слово, предлагая подходящие под код варианты.</p>
+                <p>После каждой успешной попытки будет открыта еще одна буква.<p/>
+                <p>Начать новую игру — <b>F5</b>.<p/>
             </div>
         </div>
     </body>
