--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
+		<meta http-equiv="cache-control" content="no-cache" />
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
         <link rel="stylesheet" media="screen"
               href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
 
@@ -58,7 +62,9 @@
     <body ng-app="main">
         <div class="container" ng-controller="GameCtrl">
             <div class="row">
-                <h1>Слово угадай игра</h1>
+				<div class="col-md-4">
+					<h2 class="text-center">Слово угадай игра</h1>
+				</div>
             </div>
             <div class="row">
                 <div class="col-md-4">
