Add page footer

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -93,6 +93,14 @@
             .input-loading {
                 background: url('assets/loading.gif') no-repeat right 10px center;
             }
+            .footer {
+                padding-top: 20px;
+                padding-bottom: 30px;
+                margin-top: 40px;
+                border-top: 1px solid #eee;
+                color: #888;
+                font-size: smaller;
+            }
         </style>
     </head>
 <script>
@@ -148,6 +156,11 @@
                     <p>Начать новую игру можно также нажатием <b>F5</b>.<p/>
                 </div>
             </div>
+
+            <div class="footer">
+                <p>&copy; <a href="https://github.com/dryewo">Dmitry Balakhonskiy</a> 2014</p>
+            </div>
         </div>
+       
     </body>
 </html>
