--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Слово угадай игра</title>
         <meta charset="utf-8">
         <meta http-equiv="cache-control" content="no-cache" />
 
@@ -117,7 +118,7 @@
         <div class="container" ng-controller="GameCtrl">
             <div class="row">
                 <div class="col-sm-6 col-md-4">
-                    <h2 class="text-center">Слово угадай игра</h1>
+                    <h2 class="text-center">Слово угадай игра</h2>
                 </div>
             </div>
             <div class="row">
