--- a/resources/public/watch.html
+++ b/resources/public/watch.html
@@ -79,7 +79,7 @@
                 <h2>Другие угадывают смотри</h2>
             </div>
             <div class="row">
-                <p>Всего игроков {{playerCount}}, смотретелей {{watcherCount}}</p>
+                <p>Всего играющих {{playerCount}}, наблюдающих {{watcherCount}}</p>
                 <table class="table table-condensed">
                     <thead>
                     	<tr>
